--- a/index.css
+++ b/index.css
@@ -48,7 +48,12 @@ header li img {
     top: 58px;
     border-radius: 10px;
     padding:0%;
+
 }
+.button1:focus {
+    outline: none;
+  }
+  
 
 .button2{
     background: #682C0E;
@@ -100,9 +105,7 @@ header li img {
     width: 100%;
     height: 379px;
 }
-/* #section2 .img3{
-    width:500px;
-} */
+
 #section2 h2{
     width: 500px;
     height: 144px;
@@ -143,6 +146,7 @@ header li img {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 30px;
     background-color:#F9E0AE;
     border-radius: 10px;
     padding: 20px;
@@ -167,22 +171,61 @@ header li img {
  
 }
 
-#footer {
-    margin-top: 35px;
+#section5 {
+    margin:30px;
+    padding-top: 120px;
+    padding-bottom: 30px;
+}
+#section5 img{
+    max-width: 100%;
+    height: auto;
+}
+footer {
     background-color: #F9E0AE;
-    width: 1280px;
-    height: 350px;
+}
+
+#footer  {
+    margin-top: 35px;
+    width: 40% 20% 20% 20%;
+    height: 250px;
     /* top: 3157px; */
     display: flex;
+    justify-content: center;
+    justify-content: space-between;
     clear: both;
-
+    padding:48px;  
 }
-#footer ul {
-    display: flex;
+#footer ul{
+    padding-left: 0px;
+}
+
+#footer img {
+    padding-top: 30px;
+    max-width: 100%;
+    margin: auto;
+    position: relative; 
+}
+
+#footer .footer1 li {
+    padding-top: 0px;
+    margin-top: 0px;
+    display: inline-flex;
     list-style: none;
     justify-content: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-#footer li{
+#footer .footer1{
     margin:0 5px;
+}
+#footer .footer3{
+    list-style: none;
+}
+.copyright{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: normal;
+}
+.copyright img{
+    padding-right: 5px;
 }
