--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ header{
 body{
     font-family: 'Gruppo', sans-serif;
     font-family: 'Poppins', sans-serif;
+   
     
 }/*For Desktop */
 @media (min-width: 768px) {
@@ -209,6 +210,7 @@ header li img {
     margin:30px;
     padding-top: 120px;
     padding-bottom: 30px;
+    background-color: white;
 }
 #section5 img{
     max-width: 100%;
