--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body{
 }/*For Desktop */
 @media (min-width: 768px) {
     body {
-      background-color: #f0f0f0;
+      background-color: white;
     }
   
     
@@ -29,7 +29,7 @@ body{
   /* Styles for Mobile */
   @media (max-width: 767px) {
     body {
-      background-color: #fff;
+      background-color:white;
     }
   }
 
